removendo algumas linhas

--- a/projetofinal/src/main/resources/formsTest/index_localDate_teste.html
+++ b/projetofinal/src/main/resources/formsTest/index_localDate_teste.html
@@ -9,6 +9,7 @@
 
 <body>
     <form action="http://localhost:8080/localdate" method="POST">
+        <label for="localDate">data para testar</label>
         <input type="date" name="localDate" id="localDate">
         <input type="submit">
     </form>
