correção nomes banco de dados

--- a/projetofinal/src/main/resources/formsTest/index_cadastrar_evento.html
+++ b/projetofinal/src/main/resources/formsTest/index_cadastrar_evento.html
@@ -10,7 +10,7 @@
 <body style="display: block;">
     <div style="color: white; background-color: cornflowerblue; margin: 5px; display: block;">
         <p>CRIAR EVENTO</p>
-        <form action="http://localhost:8080/cadastroEvento" method="POST">
+        <form action="http://localhost:8080/evento" method="POST">
             <label for="localidade">localidade</label>
             <input type="text" name="localidade" id="localidade"> <br>
             <label for="localDate">Data</label>
